added auth apis
