# src/modules/auth/dto/refresh-token.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class RefreshTokenDto {
+
+    refreshToken: string
+}
